🔧 fix visibility and functionality A11Y

--- a/ecotrip/src/index.css
+++ b/ecotrip/src/index.css
@@ -51,10 +51,9 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:focus,
+    
 button:focus-visible {
-  outline: none;
-  border: none;
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
 .leaflet-container {
